<resources>
    <string name="app_name">APPLogin</string>
    <string name="label_input_email">Email</string>
    <string name="label_input_password">Password</string>
    <string name="label_button_login">Enter</string>
    <string name="label_button_register">Register</string>
    <string name="label_input_password_repeat">Repeat password</string>
    <string name="label_password_not_combine">The passwords do not match!!!</string>
    <string name="label_empty_fields">Fill in all the fields!!!</string>
    <string name="label_insert_confirm">User registered successfully!!!</string>
    <string name="label_invalid_informations">Username or password is invalid!!!</string>
    <string name="label_welcome">Welcome to our system!!!</string>
    <string name="label_male_gender">Male</string>
    <string name="label_female_gender">Female</string>
</resources>